--- a/dashboard.html
+++ b/dashboard.html
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <title>Monitoring</title>
+    <link rel="icon" href="assets/icon.png" type="image/png">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -72,6 +73,7 @@
                 <div style="height: 2px; background-color: rgba(54, 162, 235, 1);"></div>
                 <div class="d-flex align-items-center justify-content-between">
                     <span class="bodytext gray">0</span>
+                    <span class="bodytext gray">m m h o</span>
                     <span class="bodytext gray">10000</span>
                 </div>
             </div>
@@ -83,6 +85,7 @@
                 <div style="height: 2px; background-color: rgba(255, 206, 86, 1);"></div>
                 <div class="d-flex align-items-center justify-content-between">
                     <span class="bodytext gray">0</span>
+                    <span class="bodytext gray">m</span>
                     <span class="bodytext gray">150</span>
                 </div>
             </div>
@@ -94,6 +97,7 @@
                 <div style="height: 2px; background-color: rgba(75, 192, 192, 1);"></div>
                 <div class="d-flex align-items-center justify-content-between">
                     <span class="bodytext gray">0</span>
+                    <span class="bodytext gray">klb</span>
                     <span class="bodytext gray">50</span>
                 </div>
             </div>
@@ -105,6 +109,7 @@
                 <div style="height: 2px; background-color: rgba(153, 102, 255, 1);"></div>
                 <div class="d-flex align-items-center justify-content-between">
                     <span class="bodytext gray">0</span>
+                    <span class="bodytext gray">m/hr</span>
                     <span class="bodytext gray">2000</span>
                 </div>
             </div>
@@ -114,29 +119,31 @@
         <div class="w-100 shadow-box p-2">
             <div class="mb-2">
                 <div class="d-flex align-items-center gap-3">
-                    <span class="bodytext">Air Rate (scfm)</span>
+                    <span class="bodytext">Torque</span>
                     <div class="tag">512</div>
                 </div>
                 <div style="height: 2px; background-color: rgba(255, 99, 132, 1);"></div>
                 <div class="d-flex align-items-center justify-content-between">
                     <span class="bodytext gray">0</span>
+                    <span class="bodytext gray">klb.ft</span>
                     <span class="bodytext gray">2000</span>
                 </div>
             </div>
             <div class="mb-2">
                 <div class="d-flex align-items-center gap-3">
-                    <span class="bodytext">Mud Conduct. In</span>
+                    <span class="bodytext">Mud Conduct. Out</span>
                     <div class="tag">512</div>
                 </div>
                 <div style="height: 2px; background-color: rgba(54, 162, 235, 1);"></div>
                 <div class="d-flex align-items-center justify-content-between">
                     <span class="bodytext gray">0</span>
+                    <span class="bodytext gray">m m h o</span>
                     <span class="bodytext gray">10000</span>
                 </div>
             </div>
             <div class="mb-2">
                 <div class="d-flex align-items-center gap-3">
-                    <span class="bodytext">Block Position</span>
+                    <span class="bodytext">RPM Total</span>
                     <div class="tag">2479</div>
                 </div>
                 <div style="height: 2px; background-color: rgba(255, 206, 86, 1);"></div>
@@ -147,24 +154,14 @@
             </div>
             <div class="mb-2">
                 <div class="d-flex align-items-center gap-3">
-                    <span class="bodytext">WOB</span>
+                    <span class="bodytext">Hookload</span>
                     <div class="tag">27</div>
                 </div>
                 <div style="height: 2px; background-color: rgba(75, 192, 192, 1);"></div>
                 <div class="d-flex align-items-center justify-content-between">
                     <span class="bodytext gray">0</span>
+                    <span class="bodytext gray">klb</span>
                     <span class="bodytext gray">50</span>
-                </div>
-            </div>
-            <div>
-                <div class="d-flex align-items-center gap-3">
-                    <span class="bodytext">ROP</span>
-                    <div class="tag">1381</div>
-                </div>
-                <div style="height: 2px; background-color: rgba(153, 102, 255, 1);"></div>
-                <div class="d-flex align-items-center justify-content-between">
-                    <span class="bodytext gray">0</span>
-                    <span class="bodytext gray">2000</span>
                 </div>
             </div>
         </div>
