add button style

--- a/dashboard.html
+++ b/dashboard.html
@@ -53,7 +53,7 @@
     <div class="d-flex gap-3 px-3 ">
 
         <!-- Legenda chart 1 -->
-        <div class="w-100 shadow-box p-2">
+        <div class="w-100 shadow-box px-3 py-2">
             <div class="mb-2">
                 <div class="d-flex align-items-center gap-3">
                     <span class="bodytext">Air Rate (scfm)</span>
@@ -116,7 +116,7 @@
         </div>
 
         <!-- Legenda chart 2 -->
-        <div class="w-100 shadow-box p-2">
+        <div class="w-100 shadow-box px-3 py-2">
             <div class="mb-2">
                 <div class="d-flex align-items-center gap-3">
                     <span class="bodytext">Torque</span>
@@ -167,7 +167,7 @@
         </div>
 
         <!-- Legenda chart 3 -->
-        <div class="w-100 shadow-box p-2">
+        <div class="w-100 shadow-box px-3 py-2">
             <div class="mb-2">
                 <div class="d-flex align-items-center gap-3">
                     <span class="bodytext">Air Rate (scfm)</span>
@@ -226,7 +226,7 @@
         </div>
 
         <!-- Legenda chart 4 -->
-        <div class="w-100 shadow-box p-2">
+        <div class="w-100 shadow-box px-3 py-2">
             <div class="mb-2">
                 <div class="d-flex align-items-center gap-3">
                     <span class="bodytext">Air Rate (scfm)</span>
